# shift-mind

./: .editorconfig  .gitignore  README.md  STYLE_GUIDE.md  TESTING_GUIDE.md  docker-compose.supabase.yml  docker-compose.yml  package-lock.json  package.json
ai/: Dockerfile.dev  README.md  demo_data.sql  pyproject.toml
ai/src/: forecast.py  main.py  server.py
api/: .env.example  Dockerfile  __init__.py  db.py  main.py  requirements.txt
api/routes/: calendar.py  employees.py  forecast.py  schedule.py
api/services/: forecast_client.py  scheduler.py
app/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
app/src/: App.css  App.tsx  index-simple.css  index.css  main.tsx  vite-env.d.ts
app/src/api/: availability.ts  budgets.ts  businesses.ts  calendar.ts  client.ts  employees.ts
app/src/auth/: SimpleAuthProvider.ts  index.ts  types.ts
app/src/components/: AuthGuard.tsx  BusinessManagement.tsx  BusinessSetupWizard.tsx  DataTable.tsx  FormField.tsx  Home.tsx  ImportWizard.tsx  JsonField.tsx  Layout.tsx  LoginPage.tsx  MultiHourMultiplier.tsx  Navbar.tsx  ScheduleBoard.tsx  ScheduleCreator.tsx  TimeRangeField.tsx  Toast.tsx
app/src/components/ui/: AlertsPanel.tsx  BarChart.tsx  BudgetBar.tsx  DataCard.tsx  Modal.tsx  PageHeader.tsx  ProgressBar.tsx  Slider.tsx  Sparkline.tsx
app/src/contexts/: AuthContext.tsx
app/src/hooks/: useCostCalc.ts
app/src/pages/: AIForecast.tsx  Automations.tsx  Availability.tsx  Budgets.tsx  BusinessSettings.tsx  Employees.tsx  HomePage.tsx  HomePage_new.tsx  ImportPage.tsx  Schedule.tsx  ScheduleBoard.tsx  ScheduleBoardFixed.tsx  ScheduleBoardNew.tsx  SchedulePage.tsx  ScheduleTestPage.tsx  SeasonalProfiles.tsx
docs/: copilot-prompts.md  shift_mind_ux_flow_stages_0_8.md  test-scenarios.md
infra/: README.md
infra/docker/: docker-compose.prod.yml
supabase/: config.toml
supabase/migrations/: 20241019000000_initial_schema.sql  20241019100000_create_core_tables.sql  20241019200000_security_updates.sql  20241021_add_business_claims.sql  local_setup.sql
supabase/volumes/db/data/: postmaster.pid
supabase/volumes/db/data/global/: 1214  1232  1233  1260  1261  1261_vm  1262  2676  2677  2694  2695  pg_control  pg_internal.init
supabase/volumes/db/init/: 01-init.sql
(+159 files in other folders)
